[gd_scene load_steps=5 format=3 uid="uid://bexvvsxohs5xm"]

[ext_resource type="Script" uid="uid://cvxvoqns1yg1c" path="res://ui/screen_ui/save_and_load/new_world_menu/new_world_menu.gd" id="1_0amx6"]
[ext_resource type="Theme" uid="uid://b6tppincjordy" path="res://ui/main_ui_theme.tres" id="2_0amx6"]
[ext_resource type="PackedScene" uid="uid://bro7uo2viqqx3" path="res://ui/screen_ui/elements/panel_container_wrapper.tscn" id="2_5li0k"]
[ext_resource type="Texture2D" uid="uid://bbhcyk1k6fkk" path="res://ui/screen_ui/save_and_load/new_world_menu/new_world_decor.png" id="3_mquka"]

[node name="NewWorldMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0amx6")

[node name="PanelContainerWrapper" parent="." instance=ExtResource("2_5li0k")]
layout_mode = 1
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainerWrapper"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainerWrapper/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainerWrapper/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_mquka")
stretch_mode = 2

[node name="Control" type="Control" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2

[node name="Title" type="RichTextLabel" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0amx6")
bbcode_enabled = true
text = "Create a new World"
fit_content = true

[node name="WorldName" type="LineEdit" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_0amx6")
theme_override_font_sizes/font_size = 16
text = "New Forest"
placeholder_text = "Name your Forest"
max_length = 25

[node name="Control2" type="Control" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2

[node name="WorldType" type="RichTextLabel" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0amx6")
bbcode_enabled = true
text = "World Type"
fit_content = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_0amx6")
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "Grove"

[node name="Button2" type="Button" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_0amx6")
toggle_mode = true
text = "Forest"

[node name="Button3" type="Button" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_0amx6")
toggle_mode = true
text = "Woodland"

[node name="Control3" type="Control" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0amx6")
bbcode_enabled = true
text = "[color=d9863e]Maybe some other world settings????"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainerWrapper/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_0amx6")
text = "Back"

[node name="CreateButton" type="Button" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_0amx6")
text = "Plant your Forest!"
